--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <nav class="navbar">
-                <a href="index.html" class="nav-item active">Phòng vé</a>
+                <a href="index.html" class="nav-item active">Nhận hàng</a>
                 <a href="warehouse.html" class="nav-item">Kho hàng</a>
                 <a href="#" class="nav-item">Thống kê</a>
             </nav>
@@ -30,10 +30,53 @@
     <main class="main-content">
         <div class="container">
             <div class="page-header">
-                <h2>Trạm hiện tại: <span class="station-name">AN ĐỒNG</span></h2>
+                <h2>Trạm hiện tại: <span class="station-name"></span></h2>
             </div>
 
             <section class="management-section">
+                <!-- Form tìm kiếm -->
+                <div class="search-section">
+                    <h3 class="section-title">Tìm kiếm</h3>
+                    <form id="searchForm" class="search-form">
+                        <div class="search-row">
+                            <div class="search-group">
+                                <input type="text" id="searchKeyword" name="searchKeyword"
+                                    placeholder="Tên, điện thoại hoặc mã hàng">
+                            </div>
+                            <div class="search-group">
+                                <label>Ngày:</label>
+                                <input type="datetime-local" id="searchDateFrom" name="searchDateFrom">
+                            </div>
+                            <div class="search-group">
+                                <label>-</label>
+                                <input type="datetime-local" id="searchDateTo" name="searchDateTo">
+                            </div>
+                            <div class="search-group">
+                                <select id="searchStation" name="searchStation">
+                                    <option value="">-- Chọn trạm --</option>
+                                    <!-- Options loaded from data/options.js -->
+                                </select>
+                            </div>
+                            <div class="search-group">
+                                <select id="searchVehicle" name="searchVehicle">
+                                    <option value="">-- Chọn xe --</option>
+                                    <!-- Options loaded from data/options.js -->
+                                </select>
+                            </div>
+                            <div class="search-group">
+                                <select id="searchProductType" name="searchProductType">
+                                    <option value="">-- Chọn loại hàng --</option>
+                                    <!-- Options loaded from data/options.js -->
+                                </select>
+                            </div>
+                            <div class="search-group">
+                                <button type="submit" class="btn btn-search">Tìm kiếm</button>
+                                <button type="button" class="btn btn-secondary" id="resetSearchBtn">Xóa bộ lọc</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
                 <h3 class="section-title">Gửi hàng</h3>
 
                 <!-- Form nhập hàng -->
@@ -81,10 +124,6 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="insurance">Bảo hiểm</label>
-                            <input type="number" id="insurance" name="insurance" value="0" min="0">
-                        </div>
-                        <div class="form-group">
                             <label for="totalAmount">Tổng VND</label>
                             <input type="number" id="totalAmount" name="totalAmount" required min="0">
                         </div>
@@ -127,14 +166,31 @@
         </div>
     </main>
 
+    <!-- Modal xác nhận lưu hàng -->
+    <div id="confirmModal" class="confirm-modal">
+        <div class="confirm-modal-content">
+            <div class="confirm-modal-header">
+                <h3>Xác nhận lưu đơn hàng</h3>
+            </div>
+            <div class="confirm-modal-body">
+                <p>Chọn hành động bạn muốn thực hiện:</p>
+            </div>
+            <div class="confirm-modal-actions">
+                <button type="button" class="btn btn-primary" id="btnSave">Lưu</button>
+                <button type="button" class="btn btn-success" id="btnSaveAndPrint">Lưu & In biên lai</button>
+                <button type="button" class="btn btn-secondary" id="btnCancel">Hủy (ESC)</button>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 CTY DV XE DU LỊCH VÕ CÚC PHƯƠNG. All rights reserved.</p>
         </div>
     </footer>
 
-    <script type="module" src="js/auth.js?v=3.0"></script>
-    <script type="module" src="js/script.js?v=3.0"></script>
+    <script type="module" src="js/auth.js?v=3.1"></script>
+    <script type="module" src="js/script.js?v=3.1"></script>
 </body>
 
 </html>
