Sua lai nut luu, tao trang thong ke

--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
             <nav class="navbar">
                 <a href="index.html" class="nav-item">Phòng vé</a>
                 <a href="warehouse.html" class="nav-item">Kho hàng</a>
-                <a href="#" class="nav-item">Thống kê</a>
+                <a href="statistics.html" class="nav-item">Thống kê</a>
                 <a href="admin.html" class="nav-item active">Quản lý tài khoản</a>
             </nav>
         </div>
