--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="navbar">
                 <a href="index.html" class="nav-item active">Nhận hàng</a>
                 <a href="warehouse.html" class="nav-item">Kho hàng</a>
-                <a href="#" class="nav-item">Thống kê</a>
+                <a href="statistics.html" class="nav-item">Thống kê</a>
             </nav>
         </div>
     </header>
@@ -189,8 +189,8 @@
         </div>
     </footer>
 
-    <script type="module" src="js/auth.js?v=3.1"></script>
-    <script type="module" src="js/script.js?v=3.1"></script>
+    <script type="module" src="js/auth.js?v=4.0"></script>
+    <script type="module" src="js/script.js?v=4.0"></script>
 </body>
 
 </html>
